remove h2 database jpa test